--- a/amplify/backend/auth/supercms85d296ec/supercms85d296ec-cloudformation-template.yml
+++ b/amplify/backend/auth/supercms85d296ec/supercms85d296ec-cloudformation-template.yml
@@ -12,156 +12,159 @@ Parameters:
   unauthRoleArn:
     Type: String
 
-    
+
   identityPoolName:
     Type: String
-              
+
   allowUnauthenticatedIdentities:
     Type: String
-          
+
   lambdaLogPolicy:
     Type: String
-            
+
   openIdLambdaRoleName:
     Type: String
-            
+
   openIdRolePolicy:
     Type: String
-            
+
   openIdLambdaIAMPolicy:
     Type: String
-            
+
   openIdLogPolicy:
     Type: String
-            
+
   userPoolName:
     Type: String
-                  
+
   autoVerifiedAttributes:
     Type: CommaDelimitedList
-      
+
   mfaConfiguration:
     Type: String
-                  
+
   mfaTypes:
     Type: CommaDelimitedList
-      
+
   roleName:
     Type: String
-            
+
   roleExternalId:
     Type: String
-            
+
   policyName:
     Type: String
-            
+
   smsAuthenticationMessage:
     Type: String
-            
+
   smsVerificationMessage:
     Type: String
-            
+
   emailVerificationSubject:
     Type: String
-            
+
+  preSignUp:
+    Type: String
+
   emailVerificationMessage:
     Type: String
-              
+
   defaultPasswordPolicy:
     Type: String
-              
+
   passwordPolicyMinLength:
     Type: Number
-              
+
   passwordPolicyCharacters:
     Type: CommaDelimitedList
-            
+
   requiredAttributes:
     Type: CommaDelimitedList
-      
+
   userpoolClientName:
     Type: String
-              
+
   userpoolClientGenerateSecret:
     Type: String
-              
+
   userpoolClientRefreshTokenValidity:
     Type: Number
-              
+
   userpoolClientWriteAttributes:
     Type: CommaDelimitedList
-            
+
   userpoolClientReadAttributes:
     Type: CommaDelimitedList
-      
+
   mfaLambdaRole:
     Type: String
-            
+
   mfaLambdaLogPolicy:
     Type: String
-            
+
   mfaPassRolePolicy:
     Type: String
-            
+
   mfaLambdaIAMPolicy:
     Type: String
-            
+
   userpoolClientLambdaRole:
     Type: String
-            
+
   userpoolClientLogPolicy:
     Type: String
-            
+
   userpoolClientLambdaPolicy:
     Type: String
-              
+
   userpoolClientSetAttributes:
     Type: String
-          
+
   resourceName:
     Type: String
-            
+
   authSelections:
     Type: String
-                                                    
+
   useDefault:
     Type: String
-                  
+
   usernameAttributes:
     Type: CommaDelimitedList
-    
+
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
 
 Resources:
-  
+
   # BEGIN SNS ROLE RESOURCE
-  SNSRole: 
+  SNSRole:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
       RoleName: !If [ShouldNotCreateEnvResources, !Ref roleName, !Join ['',[!Ref roleName, '-', !Ref env]]]
-      AssumeRolePolicyDocument: 
+      AssumeRolePolicyDocument:
         Version: "2012-10-17"
-        Statement: 
+        Statement:
           - Sid: ""
             Effect: "Allow"
-            Principal: 
+            Principal:
               Service: "cognito-idp.amazonaws.com"
-            Action: 
+            Action:
               - "sts:AssumeRole"
-            Condition: 
+            Condition:
               StringEquals:
                 sts:ExternalId: !Ref roleExternalId
-      Policies: 
-        - 
+      Policies:
+        -
           PolicyName: !Ref policyName
-          PolicyDocument: 
+          PolicyDocument:
             Version: "2012-10-17"
-            Statement: 
-              - 
+            Statement:
+              -
                 Effect: "Allow"
-                Action: 
+                Action:
                   - "sns:Publish"
                 Resource: "*"
   # BEGIN USER POOL RESOURCES
@@ -172,22 +175,24 @@ Resources:
     UpdateReplacePolicy: Retain
     Properties:
       UserPoolName: !If [ShouldNotCreateEnvResources, !Ref userPoolName, !Join ['',[!Ref userPoolName, '-', !Ref env]]]
-      
-      Schema: 
-        
+
+      Schema:
+
         -
           Name: email
           Required: true
           Mutable: true
-        
-      
-      
+
+
+
       AutoVerifiedAttributes: !Ref autoVerifiedAttributes
-      
-      
+
+
       EmailVerificationMessage: !Ref emailVerificationMessage
       EmailVerificationSubject: !Ref emailVerificationSubject
-            
+      LambdaConfig:
+        PreSignUp: !Ref preSignUp
+
       Policies:
         PasswordPolicy:
           MinimumLength: !Ref passwordPolicyMinLength
@@ -195,22 +200,22 @@ Resources:
           RequireNumbers: false
           RequireSymbols: false
           RequireUppercase: false
-      
+
       UsernameAttributes: !Ref usernameAttributes
-          
+
       MfaConfiguration: !Ref mfaConfiguration
       SmsVerificationMessage: !Ref smsVerificationMessage
-      SmsConfiguration: 
+      SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: !Ref roleExternalId 
-    
+        ExternalId: !Ref roleExternalId
+
   UserPoolClientWeb:
   # Created provide application access to user pool
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
       ClientName: superc85d296ec_app_clientWeb
-      
+
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
     DependsOn: UserPool
@@ -220,7 +225,7 @@ Resources:
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
       ClientName: !Ref userpoolClientName
-      
+
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -248,7 +253,7 @@ Resources:
     Type: 'AWS::Lambda::Function'
     Properties:
       Code:
-        ZipFile: !Join 
+        ZipFile: !Join
           - |+
           - - 'const response = require(''cfn-response'');'
             - 'const aws = require(''aws-sdk'');'
@@ -264,7 +269,7 @@ Resources:
             - '   };'
             - '   identity.describeUserPoolClient(params).promise()'
             - '     .then((res) => {'
-            - '       response.send(event, context, response.SUCCESS, {''appSecret'': res.UserPoolClient.ClientSecret});'   
+            - '       response.send(event, context, response.SUCCESS, {''appSecret'': res.UserPoolClient.ClientSecret});'
             - '     })'
             - '     .catch((err) => {'
             - '       response.send(event, context, response.FAILED, {err});'
@@ -274,7 +279,7 @@ Resources:
       Handler: index.handler
       Runtime: nodejs8.10
       Timeout: '300'
-      Role: !GetAtt 
+      Role: !GetAtt
         - UserPoolClientRole
         - Arn
     DependsOn: UserPoolClientRole
@@ -285,7 +290,7 @@ Resources:
     Type: 'AWS::IAM::Policy'
     Properties:
       PolicyName: !Ref userpoolClientLambdaPolicy
-      Roles: 
+      Roles:
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
         Version: '2012-10-17'
@@ -302,7 +307,7 @@ Resources:
     Type: 'AWS::IAM::Policy'
     Properties:
       PolicyName: !Ref userpoolClientLogPolicy
-      Roles: 
+      Roles:
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
         Version: 2012-10-17
@@ -312,10 +317,10 @@ Resources:
               - 'logs:CreateLogGroup'
               - 'logs:CreateLogStream'
               - 'logs:PutLogEvents'
-            Resource: !Sub  
+            Resource: !Sub
               - arn:aws:logs:${region}:${account}:log-group:/aws/lambda/${lambda}:log-stream:*
               - { region: !Ref "AWS::Region",  account: !Ref "AWS::AccountId", lambda: !Ref UserPoolClientLambda}
-    DependsOn: UserPoolClientLambdaPolicy  
+    DependsOn: UserPoolClientLambdaPolicy
   UserPoolClientInputs:
   # Values passed to Userpool client Lambda
   # Depends on UserPool for Id
@@ -327,22 +332,22 @@ Resources:
       clientId: !Ref UserPoolClient
       userpoolId: !Ref UserPool
     DependsOn: UserPoolClientLogPolicy
-  
 
-  
-  
 
-  
-    
+
+
+
+
+
   # BEGIN IDENTITY POOL RESOURCES
-  
-  
+
+
   IdentityPool:
   # Always created
     Type: AWS::Cognito::IdentityPool
-    Properties: 
+    Properties:
       IdentityPoolName: !If [ShouldNotCreateEnvResources, 'supercms85d296ec_identitypool_85d296ec', !Join ['',['supercms85d296ec_identitypool_85d296ec', '__', !Ref env]]]
-      
+
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
           ProviderName: !Sub
@@ -352,36 +357,36 @@ Resources:
           ProviderName: !Sub
             - cognito-idp.${region}.amazonaws.com/${client}
             - { region: !Ref "AWS::Region",  client: !Ref UserPool}
-            
+
       AllowUnauthenticatedIdentities: !Ref allowUnauthenticatedIdentities
-       
-       
-    DependsOn: UserPoolClientInputs 
-    
-  
+
+
+    DependsOn: UserPoolClientInputs
+
+
   IdentityPoolRoleMap:
   # Created to map Auth and Unauth roles to the identity pool
   # Depends on Identity Pool for ID ref
     Type: AWS::Cognito::IdentityPoolRoleAttachment
-    Properties: 
+    Properties:
       IdentityPoolId: !Ref IdentityPool
       Roles:
           unauthenticated: !Ref unauthRoleArn
           authenticated: !Ref authRoleArn
     DependsOn: IdentityPool
-  
+
 
 Outputs :
-  
+
   IdentityPoolId:
     Value: !Ref 'IdentityPool'
     Description:  Id for the identity pool
   IdentityPoolName:
-    Value: !GetAtt IdentityPool.Name 
-  
-  
-  
-  
+    Value: !GetAtt IdentityPool.Name
+
+
+
+
   UserPoolId:
     Value: !Ref 'UserPool'
     Description:  Id for the user pool
@@ -395,10 +400,9 @@ Outputs :
     Description: The user pool app client id
   AppClientSecret:
     Value: !GetAtt UserPoolClientInputs.appSecret
-  
-   
-   
-  
-   
-   
-  
+
+
+
+
+
+
