--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -5,15 +5,7 @@
 			"providerPlugin": "awscloudformation"
 		}
 	},
-	"api": {
-		"supercms": {
-			"service": "AppSync",
-			"providerPlugin": "awscloudformation",
-			"output": {
-				"securityType": "AMAZON_COGNITO_USER_POOLS"
-			}
-		}
-	},
+	"api": {},
 	"hosting": {
 		"S3AndCloudFront": {
 			"service": "S3AndCloudFront",
@@ -25,5 +17,6 @@
 			"service": "S3",
 			"providerPlugin": "awscloudformation"
 		}
-	}
+	},
+	"function": {}
 }
